--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@ckeditor/ckeditor5-angular": "^2.0.2",
+    "@ckeditor/ckeditor5-build-classic": "^31.1.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^31.1.0",
     "@coreui/angular": "^2.11.2",
     "@coreui/coreui": "^2.1.16",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
@@ -30,17 +33,22 @@
     "@ionic-native/splash-screen": "^5.36.0",
     "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^5.9.1",
+    "@material/dialog": "^13.0.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "angularfire2": "^5.4.2",
     "chart.js": "^2.9.3",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "firebase": "^7.24.0",
     "ionic": "^5.4.16",
     "ionic-angular": "^3.9.10",
     "ionic-native": "^2.9.0",
+    "material-dialog": "0.0.1",
     "ng2-charts": "^2.2.3",
     "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "xlsx": "^0.17.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
