--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "admin-panel-layout",
+  "name": "admin",
   "version": "0.0.0",
+  "engines": {
+    "node": "12.11.1",
+    "npm": "6.11.3"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node server.js",
+    "build": "ng build ",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ngcc"
+    "postinstall": "ngcc",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -32,43 +37,45 @@
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/splash-screen": "^5.36.0",
     "@ionic-native/status-bar": "^5.36.0",
-    "@ionic/angular": "^5.9.1",
+    "@ionic/angular": "^5.9.3",
     "@material/dialog": "^13.0.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "angularfire2": "^5.4.2",
-    "chart.js": "^2.9.3",
+    "chart.js": "^2.9.4",
     "exceljs": "^4.3.0",
+    "express": "^4.17.2",
     "file-saver": "^2.0.5",
     "firebase": "^7.24.0",
     "ionic": "^5.4.16",
     "ionic-angular": "^3.9.10",
     "ionic-native": "^2.9.0",
     "material-dialog": "0.0.1",
-    "ng2-charts": "^2.2.3",
-    "ngx-bootstrap": "^7.1.0",
+    "ng2-charts": "^2.4.3",
+    "ngx-bootstrap": "^7.1.2",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.0.8",
     "xlsx": "^0.17.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "~10.2.0",
+    "@angular-devkit/build-angular": "^0.1002.4",
+    "@angular/cli": "^10.2.4",
     "@angular/compiler-cli": "~10.2.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^12.20.40",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "tslint": "~6.1.0"
   }
 }
