--- a/package.json
+++ b/package.json
@@ -57,12 +57,12 @@
     "tslib": "^2.3.1",
     "typescript": "^4.0.8",
     "xlsx": "^0.17.4",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@angular/cli": "^10.2.4",
+    "@angular/compiler-cli": "~10.2.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1002.4",
-    "@angular/cli": "^10.2.4",
-    "@angular/compiler-cli": "~10.2.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^12.20.40",
